# webcurator-gym

./: .gitignore  .scratch_pdc_empirical_cap.py  pyproject.toml
configs/gepa/: curator.toml
configs/rl/: curator-gpt20b-1rollout.toml  curator-smoke-modal.toml  curator-smoke.toml
docs/: README.md  build_site.py  debug_manifest_training.md  index.html
environments/pretrain_curation_gym/: Dockerfile.runtime  README.md  pyproject.toml
environments/pretrain_curation_gym/configs/eval/: 100M-300turn-codex.toml  10M-100turn-smoke.toml  10M-60turn-codex-smoke.toml  25M-60turn-codex-smoke.toml  400M-300turn-codex-curation.toml  400M-300turn-codex.toml  deepseek-v4-flash-100M-300turn-smoke.toml  deepseek-v4-flash-smoke.toml  deepseek-v4-pro-100M-300turn-codex-cputrainer-smoke.toml  deepseek-v4-pro-100M-300turn-codex-smoke.toml  deepseek-v4-pro-400M-300turn-codex.toml  deepseek-v4-pro-400M-500turn.toml  flash-curation-smoke-local.toml  glm5.2-100M-300turn-codex-smoke.toml  glm5.2-100M-300turn-smoke.toml  glm5.2-smoke.toml
environments/pretrain_curation_gym/configs/rl/: curator-gpt20b-modal-1rollout.toml  curator-gpt20b-modal.toml
environments/pretrain_curation_gym/decon/: README.md  build_from_source.sh  build_static.sh
environments/pretrain_curation_gym/manifests/: canonical-400m-fineweb-local.json
environments/pretrain_curation_gym/pretrain_curation_gym/: __init__.py  config.py  corpus.py  environment.py  leakage.py  manifest.py  models.py  rewards.py  state.py  task.py  taskdata.py  tasks.py  taskset.py  trainer.py  val_set.py
environments/pretrain_curation_gym/pretrain_curation_gym/gpu/: __init__.py  hf_cli_audit.py  scoring_shared.py  self_score.py  self_score_payload.py  self_score_renderer.py  self_score_runtime.py  train_gpt.py  turns.py
environments/pretrain_curation_gym/pretrain_curation_gym/util/: async_utils.py  container_memory.py  debug_train.py  hf_access.py  utils.py
environments/pretrain_curation_gym/pretrain_curation_gym/utils/: __init__.py  async_utils.py  corpus.py  hf_access.py  leakage.py  manifest.py  models.py  trainer.py  val_set.py
environments/pretrain_curation_gym/tests/: __init__.py  compat.py  conftest.py  test_400m_eval_a100_launcher.py  test_400m_eval_detached.py  test_batch_schedule.py  test_codex_config_topk.py  test_container_memory_singleflight.py  test_corpus_streaming.py  test_debug_train.py  test_docker_harness_runtime.py  test_empty_rollout_gate.py  test_environment.py  test_final_scoring_concurrency.py  test_local_sources.py  test_modal_harness_runtime.py  test_packaging.py  test_pretrain_curation_gym.py  test_provider_selection.py  test_runtime_mappings.py  test_self_score_concurrency.py  test_self_score_progress.py  test_student_model.py  test_student_optimizer.py  test_student_train.py  test_turn_tracking.py
environments/pretrain_data_curator/: Dockerfile.runtime  README.md  pyproject.toml
environments/pretrain_data_curator/.prime/: .env-metadata.json
environments/pretrain_data_curator/configs/eval/: 10M-100turn-smoke.toml  10M-60turn-codex-smoke.toml  25M-60turn-codex-smoke.toml  400M-300turn-codex-curation.toml  400M-300turn-codex.toml  deepseek-v4-flash-200m.toml  deepseek-v4-flash-smoke.toml  deepseek-v4-pro-400M-300turn-codex.toml  example.toml  full-expressivity-heuristic.toml  full-expressivity-modal.toml  full-reference.toml  glm5.2-400M-300turn-codex.toml  nemotron-nano-docker.toml
environments/pretrain_data_curator/configs/rl/: curator-gpt20b-modal-1rollout.toml  curator-gpt20b-modal.toml
environments/pretrain_data_curator/docs/: README.md  agent-workflow.md  architecture.md  build_site.py  configuration.md  debug_manifest_training.md  development.md  extending.md  manifest.md  proxy-student.md  proxy_student.md  reward.md  troubleshooting.md
environments/pretrain_data_curator/docs/site/: app.js  styles.css
environments/pretrain_data_curator/docs/site/data/: manifest.json
environments/pretrain_data_curator/docs/site/data/traces/: deepseek-v4-pro-400m-300turn-codex-1-ecc6a113df5-66dae8e09b.json
environments/pretrain_data_curator/docs/site_builder/: __init__.py  collect.py  render.py  traces.py
environments/pretrain_data_curator/docs/site_builder/assets/: codebase.html  index.html  renderer.js  styles.css
environments/pretrain_data_curator/pretrain_data_curator/: __init__.py  bash_harness.py  batch_schedule.py  codex_harness.py  container_memory.py  corpus.py  debug_train.py  docker_backend.py  docker_network.py  environment.py  eval_corpus.py  hf_access.py  hf_cli_parse.py  hf_cli_skill.md  hf_meter.py  hosted_compat.py  leakage.py  leakage_reference.py  modal_backend.py  models.py  pretrain_data_curator.py  result_gate.py  rewards.py  rollout_state.py  runtime_config.py  self_score.py  smoke_result_gate.py  student_model.py  student_optimizer.py  student_train.py  tasks.py  taskset.py  train_gpt.py  trainer.py  truncating_client.py  truncating_environment.py  utils.py  val_set.py
environments/pretrain_data_curator/pretrain_data_curator/gpu/: self_score.py  train_gpt.py
environments/pretrain_data_curator/pretrain_data_curator/util/: __init__.py  container_memory.py  debug_train.py
environments/pretrain_data_curator/scripts_400m/: gen_artifacts.py  materialize.py  prep_jsonl.py  run_400m_pod.sh
environments/pretrain_data_curator/tests/: conftest.py  test_400m_eval_a100_launcher.py  test_400m_eval_detached.py  test_400m_result_gate.py  test_bash_harness_truncation.py  test_batch_schedule.py  test_codex_config_topk.py  test_codex_manifest_continuation.py  test_container_memory_singleflight.py  test_corpus_streaming.py  test_debug_train.py  test_docker_harness_runtime.py  test_hosted_compat.py  test_local_sources.py  test_modal_harness_runtime.py  test_pretrain_data_curator.py  test_provider_selection.py  test_runtime_mappings.py  test_self_score_progress.py  test_smoke_a100_launcher.py  test_student_model.py  test_student_optimizer.py  test_student_train.py  test_tool_output_truncation.py
scripts/: run_25m_smoke_a100.sh  run_400m_eval_a100.sh  run_400m_eval_on_pod.sh
(+10 files in other folders)
