[project]
name = "pretrain-curation-gym"
description = "An agent curates a pre-cutoff LLM corpus, scored by proxy-student cross-entropy and leakage."
readme = "README.md"
tags = [
    "huggingface",
    "datasets",
    "data-curation",
    "pretraining",
    "tool-use",
    "multi-turn",
    "train",
    "eval",
]
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "verifiers==0.2.1.dev42",
    "renderers==0.1.8.dev49",
    "datasets>=2.18.0",
    "huggingface-hub>=0.24.0",
    "numpy>=1.24.0",
    "modal>=0.73",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pretrain_curation_gym"]

[tool.hatch.build.targets.wheel.force-include]
"decon/bin/decon" = "pretrain_curation_gym/decon/bin/decon"
"decon/bundled-evals" = "pretrain_curation_gym/decon/bundled-evals"
"manifests" = "pretrain_curation_gym/manifests"

[tool.hatch.build]
include = [
    "pretrain_curation_gym/**/*.py",
    "pretrain_curation_gym/**/*.md",
    "decon/bin/decon",
    "decon/bundled-evals/*.jsonl.gz",
    "manifests/*.json",
    "pyproject.toml",
]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1

[project.scripts]
pcg-debug-train = "pretrain_curation_gym.util.debug_train:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "torch==2.7.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that invoke real decon or subprocess GPU training",
]
