[project]
name = "pretrain-curation-gym"
description = "An agent curates a pre-cutoff LLM corpus, scored by proxy-student cross-entropy and leakage."
readme = "README.md"
tags = [
    "huggingface",
    "datasets",
    "data-curation",
    "pretraining",
    "tool-use",
    "multi-turn",
    "train",
    "eval",
]
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    # verifiers[modal] carries the Modal SDK at the version the v1 modal
    # harness runtime requires; the environment itself never imports modal.
    "verifiers[modal]==0.2.1.dev61",
    "renderers==0.1.8",
    "datasets>=2.18.0",
    "huggingface-hub>=0.24.0",
    "numpy>=1.24.0",
    "orjson>=3.9.0",
    "tenacity>=8.5.0",
    "tiktoken>=0.7.0",
    # Not imported directly: `datasets` needs it at runtime to stream
    # zstd-compressed Hub sources an agent may cite. (The runtime image also
    # installs it separately for the in-container `hf` CLI.)
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pretrain_curation_gym"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "scripts/hatch_build.py"

[tool.hatch.build.targets.wheel.force-include]
"decon/bin/decon" = "pretrain_curation_gym/decon/bin/decon"
"decon/bundled-evals" = "pretrain_curation_gym/decon/bundled-evals"
"pyproject.toml" = "pretrain_curation_gym/pyproject.toml"

[tool.hatch.build]
include = [
    "pretrain_curation_gym/**/*.py",
    "pretrain_curation_gym/**/*.md",
    "decon/bin/decon",
    "decon/bundled-evals/*.jsonl.gz",
    "scripts/hatch_build.py",
    "pyproject.toml",
]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "torch==2.7.0",
    # train_gpt's torch-guarded block imports tqdm; production hosts never
    # reach it (no torch) and sandbox images bake their own copy.
    "tqdm>=4.66.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that invoke real decon or subprocess GPU training",
]
