[project]
name = "pretrain-data-curator"
description = "Agent curates an LLM pretraining corpus from the pre-cutoff Hugging Face universe, scored by a proxy-student training run plus quality, diversity, cost, and leakage terms."
tags = ["huggingface", "datasets", "data-curation", "pretraining", "tool-use", "multi-turn", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.14",
    "datasets>=2.18.0",
    "huggingface-hub>=0.24.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Only required for the real GPU sandbox trainer (use_real_trainer=True);
# imported lazily on that path so the default heuristic backend has no GPU/
# sandbox dependency.
sandbox = ["prime-sandboxes"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pretrain_data_curator"]

[tool.hatch.build]
include = ["pretrain_data_curator/**/*.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 4
rollouts_per_example = 1
