[project]
name = "pretrain-data-curator"
description = "Agent curates an LLM pretraining corpus from the pre-cutoff Hugging Face universe, scored by proxy-student cross-entropy plus a leakage penalty (cost tracked as telemetry)."
tags = ["huggingface", "datasets", "data-curation", "pretraining", "tool-use", "multi-turn", "train", "eval"]
version = "0.8.6"
requires-python = ">=3.11,<3.14"
dependencies = [
    "verifiers==0.1.15.dev376",
    "renderers==0.1.8.dev49",
    "datasets>=2.18.0",
    "huggingface-hub>=0.24.0",
    "numpy>=1.24.0",
    "modal>=0.73",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pretrain_data_curator"]

[tool.hatch.build]
include = ["pretrain_data_curator/**/*.py", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "torch==2.7.0",
]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests that invoke real decon or subprocess GPU training (deselect with '-m \"not slow\"')",
]
